@@ -75,14 +75,15 @@
     <!-- Project Encoding -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!-- Version Properties -->
-	<maven.compiler.target>8</maven.compiler.target>
-    <maven.compiler.source>8</maven.compiler.source>
+	<maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
     <!-- Supress checkstyle errors on legacy com.iplanet and com.sun.identity packages -->
     <checkstyleUnitTestSuppressionsLocation>checkstyle/suppressions.xml</checkstyleUnitTestSuppressionsLocation>
-    <opendj.version>4.10.0</opendj.version>
+    <opendj.version>4.10.1-SNAPSHOT</opendj.version>
     <javadoc-utils.version>1.0.0</javadoc-utils.version>
     <ant.contrib.version>1.0b3</ant.contrib.version>
-    <guice.version>3.0</guice.version>
+    <guice.version>7.0.0</guice.version>
+    <guice.multibindings.version>4.2.3</guice.multibindings.version>
     <restlet.version>2.4.4</restlet.version>
     <powermock.version>2.0.9</powermock.version>
 <!--     <slf4j.version>1.7.25</slf4j.version> -->
@@ -109,7 +110,7 @@
     <rhino.version>1.7.12</rhino.version>
     <saaj-api.version>1.3.4</saaj-api.version>
     <saaj-impl.version>1.3.19</saaj-impl.version>
-    <jsp-api.version>2.1</jsp-api.version>
+    <jsp-api.version>3.0.0</jsp-api.version>
     <xsdlib.version>20060615</xsdlib.version>
     <authapi.version>2005-08-12</authapi.version>
     <FastInfoset.version>2006-26-09</FastInfoset.version>
@@ -120,10 +121,10 @@
     <hikaricp.version>2.4.1</hikaricp.version>
     <h2database.version>2.2.220</h2database.version>
     <activemq.version>[5.15.9,5.17)</activemq.version>
-    <javax.inject.version>1_2</javax.inject.version>
+    <jakarta.inject.version>2.0.1</jakarta.inject.version>
     <jetty.jspc.version>9.4.0.M0</jetty.jspc.version>
     <amazon.sns.version>1.10.72</amazon.sns.version>
-    <javax.websocket-api.version>1.1</javax.websocket-api.version>
+    <jakarta.websocket-api.version>2.0.0</jakarta.websocket-api.version>
     <openam.version>OpenAM ${project.version}</openam.version>
     <!--  Project web site -->
     <siteDistributionURL>scp://community.internal.forgerock.com/var/www/vhosts/openam.forgerock.org/httpdocs</siteDistributionURL>
@@ -142,21 +143,9 @@
   <!-- Profiles -->
   <profiles>
     <profile>
-      <id>jdk8.options</id>
-      <activation>
-        <jdk>1.8</jdk>
-      </activation>
-      <properties>
-        <!-- Disable Doclint on JDK8+ -->
-        <javadoc.opts>-Xdoclint:none</javadoc.opts>
-        <!-- JavaDoc Setting Properties -->
-        <javadoc.options>-J-Xmx2g</javadoc.options>
-      </properties>
-    </profile>
-    <profile>
       <id>set-compiler-release</id>
       <activation>
-        <jdk>[9,)</jdk>
+        <jdk>[11,)</jdk>
       </activation>
       <build>
         <pluginManagement>
@@ -164,12 +153,20 @@
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
+              <version>3.14.0</version>
               <configuration>
                 <fork>true</fork>
-                <release>8</release>
                 <compilerArgs>
                   <arg>-XDignore.symbol.file</arg>
                   <arg>-Xlint:unchecked</arg>
+                  <arg>--add-exports</arg>
+                  <arg>java.base/sun.security.util=ALL-UNNAMED</arg>
+                  <arg>--add-exports</arg>
+                  <arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
+                  <arg>--add-exports</arg>
+                  <arg>java.base/sun.net.www.protocol.https=ALL-UNNAMED</arg>
+                  <arg>--add-exports</arg>
+                  <arg>java.security.jgss/sun.security.krb5=ALL-UNNAMED</arg>
                 </compilerArgs>
               </configuration>
             </plugin>
@@ -356,7 +353,8 @@
     <!-- openam cassandra submodules -->
     <module>openam-cassandra</module>
     <!-- shaded libraries -->
-    <module>jato-shaded</module>
+<!--    <module>jato-shaded</module>-->
+    <module>transform-jakarta</module>
   </modules>
   <!-- Mailing Lists -->
   <mailingLists>
@@ -1053,16 +1051,7 @@
         <version>${project.version}</version>
       </dependency>
       <!-- External project dependencies -->
-      <dependency>
-        <groupId>org.apache.click</groupId>
-        <artifactId>click-extras</artifactId>
-        <version>${click.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.click</groupId>
-        <artifactId>click-nodeps</artifactId>
-        <version>${click.version}</version>
-      </dependency>
+
       <dependency>
         <groupId>commons-beanutils</groupId>
         <artifactId>commons-beanutils</artifactId>
@@ -1169,15 +1158,21 @@
         </exclusions>
       </dependency>
       <dependency>
-        <groupId>javax.websocket</groupId>
-        <artifactId>javax.websocket-api</artifactId>
-        <version>${javax.websocket-api.version}</version>
+        <groupId>jakarta.websocket</groupId>
+        <artifactId>jakarta.websocket-api</artifactId>
+        <version>${jakarta.websocket-api.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>jakarta.websocket</groupId>
+        <artifactId>jakarta.websocket-client-api</artifactId>
+        <version>${jakarta.websocket-api.version}</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.glassfish.metro</groupId>
         <artifactId>wsit-impl</artifactId>
-        <version>2.4.4</version>
+        <version>3.0.3</version>
       </dependency>
       <dependency>
         <groupId>javax.xml</groupId>
@@ -1195,26 +1190,29 @@
         <artifactId>jaxrpc-spi</artifactId>
         <version>${jaxrpc-spi.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.openidentityplatform.openam.shaded</groupId>
+        <artifactId>jaxrpc</artifactId>
+        <classifier>jakarta</classifier>
+        <version>${project.version}</version>
+      </dependency>
       <!-- TODO jmx -->
 	<dependency>
 	    <groupId>org.glassfish.jersey.bundles</groupId>
 	    <artifactId>jaxrs-ri</artifactId>
-	    <version>2.37</version>
+	    <version>3.1.9</version>
 	</dependency>
       <dependency>
-        <groupId>org.openidentityplatform.external.com.iplanet.jato</groupId>
+        <groupId>org.openidentityplatform.openam.shaded</groupId>
         <artifactId>jato</artifactId>
         <version>2005-05-04</version>
+        <classifier>jakarta</classifier>
       </dependency>
       <dependency>
         <groupId>org.openidentityplatform.openam.shaded</groupId>
-        <artifactId>jato-shaded</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.openidentityplatform.external.com.sun.web.ui</groupId>
         <artifactId>cc</artifactId>
         <version>2008-08-08</version>
+        <classifier>jakarta</classifier>
       </dependency>
       <dependency>
         <groupId>com.sun.web.ui</groupId>
@@ -1294,8 +1292,8 @@
       </dependency>
       <dependency>
         <groupId>com.sun.mail</groupId>
-        <artifactId>javax.mail</artifactId>
-        <version>1.6.2</version>
+        <artifactId>jakarta.mail</artifactId>
+        <version>2.0.1</version>
       </dependency>
       <dependency>
         <groupId>com.sun.jersey.contribs.jersey-oauth</groupId>
@@ -1328,8 +1326,8 @@
         <version>${saaj-impl.version}</version>
       </dependency>
       <dependency>
-        <groupId>javax.servlet.jsp</groupId>
-        <artifactId>jsp-api</artifactId>
+        <groupId>jakarta.servlet.jsp</groupId>
+        <artifactId>jakarta.servlet.jsp-api</artifactId>
         <version>${jsp-api.version}</version>
         <scope>provided</scope>
       </dependency>
@@ -1490,6 +1488,7 @@
         <artifactId>org.restlet.ext.slf4j</artifactId>
         <version>${restlet.version}</version>
       </dependency>
+
       <!-- Commons Dependencies -->
       <dependency>
         <groupId>com.google.code.findbugs</groupId>
@@ -1517,24 +1516,18 @@
         <groupId>com.google.inject</groupId>
         <artifactId>guice</artifactId>
         <version>${guice.version}</version>
-        <!-- Exclude aopalliance dependency due to ambiguous licensing terms. -->
-        <classifier>no_aop</classifier>
         <exclusions>
-          <exclusion>
-            <groupId>aopalliance</groupId>
-            <artifactId>aopalliance</artifactId>
-          </exclusion>
           <!-- Exclude javax.inject in favour of servicemix OSGi-compatible version -->
           <exclusion>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
+            <groupId>jakarta.inject</groupId>
+            <artifactId>jakarta.inject</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
       <dependency>
         <groupId>com.google.inject.extensions</groupId>
         <artifactId>guice-multibindings</artifactId>
-        <version>${guice.version}</version>
+        <version>${guice.multibindings.version}</version>
         <exclusions>
           <exclusion>
             <groupId>com.google.inject</groupId>
@@ -1555,9 +1548,9 @@
       </dependency>
       <dependency>
         <!-- Use OSGi-compatible javax.inject to satisfy commons dependencies -->
-        <groupId>org.apache.servicemix.bundles</groupId>
-        <artifactId>org.apache.servicemix.bundles.javax-inject</artifactId>
-        <version>${javax.inject.version}</version>
+        <groupId>jakarta.inject</groupId>
+        <artifactId>jakarta.inject-api</artifactId>
+        <version>${jakarta.inject.version}</version>
       </dependency>
       <dependency>
         <groupId>org.jgrapht</groupId>
@@ -1684,10 +1677,11 @@
         <scope>test</scope>
       </dependency>
       <dependency>
-        <groupId>org.apache.activemq</groupId>
+        <groupId>org.openidentityplatform.openam.shaded</groupId>
         <artifactId>activemq-client</artifactId>
-        <version>${activemq.version}</version>
+        <version>${project.version}</version>
         <scope>test</scope>
+        <classifier>jakarta</classifier>
       </dependency>
       <dependency>
         <groupId>org.openidentityplatform.openam</groupId>
@@ -1887,15 +1881,15 @@
 					<artifactId>jato</artifactId>
 					<version>2005-05-04</version>
 					<packaging>jar</packaging>
-					<downloadUrl>${basedir}/extlib/jato-2005-05-04.jar</downloadUrl>
-					<deploy>false</deploy>
+                    <downloadUrl>${basedir}/extlib/jato-2005-05-04.jar</downloadUrl>
+                    <deploy>false</deploy>
 				</artifactItem>
 				<artifactItem>
                 	<groupId>org.openidentityplatform.external.com.sun.web.ui</groupId>
                 	<artifactId>cc</artifactId>
                 	<version>2008-08-08</version>
                 	<packaging>jar</packaging>
-                	<downloadUrl>${basedir}/extlib/cc-2008-08-08.jar</downloadUrl>
+                    <downloadUrl>${basedir}/extlib/cc-2008-08-08.jar</downloadUrl>
                 	<deploy>false</deploy>
                 	<force>true</force>
               	</artifactItem>
@@ -2160,7 +2154,7 @@
 				<inherited>true</inherited>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.13.0</version>
+				<version>3.14.0</version>
                 <configuration>
                   <fork>true</fork>
                   <compilerArgs>
@@ -2191,11 +2185,17 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.2.3</version>
 			</plugin>
-			
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.6.0</version>
+			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>3.0.0-M4</version>
+				<version>3.5.3</version>
 			</plugin>
 
 			<plugin>
@@ -2251,7 +2251,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>jaxb2-maven-plugin</artifactId>
-				<version>1.3.1</version>
+				<version>3.2.0</version>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
